--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>Customer Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align="center">
@@ -10,7 +14,7 @@
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
-        <tr>
+        <tr class="border border-dark text-center bg-dark text-light">
             <th>Customer ID</th>
             <th>Full Name</th>
             <th>Email Address</th>
@@ -21,27 +25,36 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="customer : ${customerList}">
-            <td th:text="${customer.id}">Customer ID</td>
-            <td th:text="${customer.fullName}">Full Name</td>
-            <td th:text="${customer.emailAddress}">Email Address</td>
-            <td th:text="${customer.age}">Age</td>
-            <td th:text="${customer.address}">Address</td>
-            <td>
-                <a th:href="@{'/checkout-book/' + ${customer.id}}">Checkout</a>
-                <a th:href="@{'/return-book/' + ${customer.id}}">Return</a>
-            </td>
-            <td>
-                <a th:href="@{'/edit/' + ${customer.id}}">Edit</a>
-                <a th:href="@{'/delete/' + ${customer.id}}">Delete</a>
-            </td>
-        </tr>
+        <div class="container">
+            <tr class="border border-dark text-center" th:each="customer : ${customerList}">
+                <td th:text="${customer.id}">Customer ID</td>
+                <td th:text="${customer.fullName}">Full Name</td>
+                <td th:text="${customer.emailAddress}">Email Address</td>
+                <td th:text="${customer.age}">Age</td>
+                <td th:text="${customer.address}">Address</td>
+                <td class="text-center">
+                    <a href="#" class="btn btn-sm rounded bg-dark text-light"
+                       th:href="@{'/checkout-book/' + ${customer.id}}">Checkout</a>
+                    <a href="#" class="btn btn-sm rounded bg-dark text-light"
+                       th:href="@{'/return-book/' + ${customer.id}}"
+                       th:unless="${customer.getBooks().isEmpty()}">Return</a>
+                    <a href="#" class="btn btn-sm rounded bg-dark text-light"
+                       th:href="@{'/return-book/' + ${customer.id}}">View</a>
+                </td>
+                <td>
+                    <a href="#" class="btn btn-sm rounded bg-dark text-light"
+                       th:href="@{'/edit/' + ${customer.id}}">Edit</a>
+                    <a href="#" class="btn btn-sm rounded bg-dark text-light"
+                       th:href="@{'/delete/' + ${customer.id}}">Delete</a>
+                </td>
+            </tr>
+        </div>
         </tbody>
     </table>
     <br>
-    <a th:href="@{/new}">Add New Customer</a>
+    <a class="btn btn-sm rounded bg-dark text-light" th:href="@{/new}">Add New Customer</a>
     <br><br>
-    <a th:href="@{/books}">View Book List</a>
+    <a class="btn btn-sm rounded bg-dark text-light" th:href="@{/books}">View Book List</a>
 </div>
 </body>
 </html>
