--- a/src/main/resources/templates/register-success.html
+++ b/src/main/resources/templates/register-success.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Home Page</title>
+    <title>Register Success Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
@@ -11,11 +11,9 @@
 </head>
 <div class="container">
     <body>
-    <h1 class="text-center display-3">County Public Library System</h1>
-    <p class="fs-4 text-center">Welcome to the county public library system.</p>
+    <h1 class="text-center display-4">Registration completed successfully</h1>
     <div class="text-center">
-        <a href="#" th:href="@{/register-form}" class="btn bg-primary btn-lg">Register</a>
-        <a href="#" th:href="@{/login}"class="btn bg-primary btn-lg">Sign In</a>
+        <a href="#" th:href="@{'/'}" class="btn bg-primary btn-lg">Return to Homepage</a>
     </div>
     </body>
 </div>
