--- a/src/main/resources/templates/book-index.html
+++ b/src/main/resources/templates/book-index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>Book Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align="center">
@@ -26,16 +30,16 @@
             <td th:text="${book.author}">Author</td>
             <td th:text="${book.isbn}">ISBN</td>
             <td>
-                <a th:href="@{'/books/edit/' + ${book.id}}">Edit</a>
-                <a th:href="@{'/books/delete/' + ${book.id}}">Delete</a>
+                <a th:href="@{'/books/edit/' + ${book.id}}" class="btn btn-primary">Edit</a>
+                <a th:href="@{'/books/delete/' + ${book.id}}" class="btn btn-primary">Delete</a>
             </td>
         </tr>
         </tbody>
     </table>
     <br>
-    <a th:href="@{/books/new}">Add New Book</a>
+    <a th:href="@{/books/new}" class="btn btn-primary">Add New Book</a>
     <br><br>
-    <a th:href="@{/}">Return To Customer List</a>
+    <a th:href="@{/}" class="btn btn-primary">Return To Customer List</a>
 </div>
 </body>
 </html>
