--- a/src/main/resources/templates/customer-books.html
+++ b/src/main/resources/templates/customer-books.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>Customer's Checked Out Books</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align="center">
@@ -24,12 +28,12 @@
             <td th:text="${book.title}">Title</td>
             <td th:text="${book.author}">Author</td>
             <td th:text="${book.isbn}">ISBN</td>
-            <td><a th:href="@{'/books/return/' + ${book.id} + '/' + ${customerId}}">Return</a>
+            <td><a th:href="@{'/books/return/' + ${book.id} + '/' + ${customerId}}" class="btn btn-primary">Return</a>
         </tr>
         </tbody>
     </table>
     <br>
-    <a th:href="@{'/'}">Return to Customer List</a>
+    <a th:href="@{'/'}" class="btn btn-primary">Return to Customer List</a>
 </div>
 </body>
 </html>
