--- a/src/main/resources/templates/edit-customer.html
+++ b/src/main/resources/templates/edit-customer.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Edit Customer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align="center">
@@ -32,7 +36,7 @@
                 <td><textarea type="text" th:field="*{address}" required></textarea></td>
             </tr>
             <tr>
-                <td colspan="2"><button type="submit">Save</button></td>
+                <td colspan="2"><button type="submit" class="btn btn-primary">Save</button></td>
             </tr>
         </table>
     </form>
