--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="utf-8"/>
     <title>Error Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div align="center">
-    <h1>Error Page</h1>
+    <h1 class="text-display4">Error Page</h1>
     <br/><br/>
     <p th:text="${message}">Message</p>
     <br>
-    <a th:href="@{'/'}">Return to Customer List</a>
+    <a th:href="@{'/'}" class="btn btn-primary">Return to Home Page</a>
 </div>
 </body>
 </html>
