--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,11 +16,11 @@
         <form action="#" th:action="@{/register}" th:object="${customer}" method="post">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" th:field="*{customerDetails.username}"class="form-control" id="username">
+                <input type="text" th:field="*{user.username}"class="form-control" id="username">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="text" th:field="*{customerDetails.password}" class="form-control" id="password">
+                <input type="text" th:field="*{user.password}" class="form-control" id="password">
             </div>
             <div class="mb-3">
                 <label for="firstName" class="form-label">First Name</label>
@@ -48,7 +48,7 @@
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" th:field="*{emailAddress}" class="form-control" id="email">
+                <input type="email" th:field="*{email}" class="form-control" id="email">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
