--- a/src/main/resources/templates/book-index.html
+++ b/src/main/resources/templates/book-index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-    <title>Book Manager</title>
+    <title>Available Books</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div th:replace="fragments :: navigation"/>
 <div align="center">
-    <h1>Books List</h1>
+    <h1><br>Books List</h1>
     <br/><br/>
-    <table border="1" cellpadding="10">
-        <thead>
-        <tr>
-            <th>Book ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>ISBN</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr th:each="book : ${bookList}">
-            <td th:text="${book.id}">Book ID</td>
-            <td th:text="${book.title}">Title</td>
-            <td th:text="${book.author}">Author</td>
-            <td th:text="${book.isbn}">ISBN</td>
-            <td>
-                <a th:href="@{'/books/edit/' + ${book.id}}" class="btn btn-primary">Edit</a>
-                <a th:href="@{'/books/delete/' + ${book.id}}" class="btn btn-primary">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <br>
-    <a th:href="@{/books/new}" class="btn btn-primary">Add New Book</a>
-    <br><br>
-    <a th:href="@{/}" class="btn btn-primary">Return To Customer List</a>
+    <div class="container">
+        <a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{/books/new}"
+           class="btn btn-light text-dark border-dark">Add New Book</a><br><br>
+        <table class="table table-striped border border-dark">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>ISBN</th>
+                <th>Image</th>
+                <th sec:authorize="hasRole('ROLE_USER')">Actions</th>
+                <th sec:authorize="hasRole('ROLE_ADMIN')">Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="book : ${books}">
+                <td th:text="${book.id}">ID</td>
+                <td th:text="${book.title}">Title</td>
+                <td th:text="${book.author}">Author</td>
+                <td th:text="${book.isbn}">ISBN</td>
+                <td><a th:href="@{'/books/cover-image/' + ${book.id}}"
+                       class="btn btn-sm btn-light text-dark border-dark ">View</a></td>
+                <div sec:authorize="hasRole('ROLE_USER')" th:if="${book.user == null}">
+                    <td><a th:href="@{'/books/checkout/' + ${book.id}}"
+                           class="btn btn-dark text-dark bg-light btn-sm">Rent</a></td>
+                </div>
+                <div sec:authorize="hasRole('ROLE_ADMIN')">
+                    <td><a th:href="@{'/books/edit/' + ${book.id}}"
+                           class="btn btn-dark text-dark bg-light btn-sm">Update</a></td>
+                </div>
+                <div sec:authorize="hasRole('ROLE_ADMIN')">
+                    <td><a th:href="@{'/books/delete/' + ${book.id}}"
+                           class="btn btn-dark text-dark bg-light btn-sm">Delete</a></td>
+                </div>
+                <div sec:authorize="hasRole('ROLE_ADMIN')">
+                    <td><a th:href="@{'/books/rental-history/' + ${book.id}}"
+                           class="btn btn-dark text-dark bg-light btn-sm">History</a></td>
+                </div>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
