--- a/src/main/resources/templates/edit-book.html
+++ b/src/main/resources/templates/edit-book.html
@@ -9,8 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div th:replace="fragments :: navigation"/><br><br>
 <div align="center">
-    <h1>Edit Book</h1>
+    <h3>Edit Book Information</h3>
     <br />
     <form action="#" th:action="@{'/books/update/' + ${book.id}}" th:object="${book}"
           method="post">
@@ -32,7 +33,11 @@
                 <td><input type="text" th:field="*{isbn}" required/></td>
             </tr>
             <tr>
-                <td colspan="2"><button type="submit" class="btn btn-primary">Save</button></td>
+                <td>Date Added:</td>
+                <td><input type="text" th:field="*{dateAdded}" readonly/></td>
+            </tr>
+            <tr>
+                <td colspan="2"><button type="submit" class="btn btn-light text-dark border-dark">Save</button></td>
             </tr>
         </table>
     </form>
