--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,50 +9,54 @@
           crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<div class="container">
-    <body>
-    <h1 class="text-center display-4">Registration Form</h1>
-    <div>
-        <form action="#" th:action="@{/register}" th:object="${customer}" method="post">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" th:field="*{user.username}"class="form-control" id="username">
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="text" th:field="*{user.password}" class="form-control" id="password">
-            </div>
-            <div class="mb-3">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" th:field="*{firstName}" class="form-control" id="firstName">
-            </div>
-            <div class="mb-3">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" th:field="*{lastName}" class="form-control" id="lastName">
-            </div>
-            <div class="mb-3">
-                <label for="streetAddress" class="form-label">Street Address</label>
-                <input type="text" th:field="*{address.streetAddress}" class="form-control" id="streetAddress">
-            </div>
-            <div class="mb-3">
-                <label for="city" class="form-label">City</label>
-                <input type="text" th:field="*{address.city}" class="form-control" id="city">
-            </div>
-            <div class="mb-3">
-                <label for="state" class="form-label">State</label>
-                <input type="text" th:field="*{address.state}" class="form-control" id="state">
-            </div>
-            <div class="mb-3">
-                <label for="zip" class="form-label">Zip Code</label>
-                <input type="text" th:field="*{address.zip}" class="form-control" id="zip">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" th:field="*{email}" class="form-control" id="email">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    </body>
+<body>
+<div th:replace="fragments :: navigation"/>
+<br>
+<h3 class="text-center">Registration Form</h3><br><br>
+<div class="container mb-3 col-4">
+    <form action="#" th:action="@{/register}" th:object="${user}" method="post">
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" th:field="*{username}" class="form-control" id="username">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="text" th:field="*{password}" class="form-control" id="password">
+        </div>
+        <div class="mb-3">
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="text" th:field="*{firstName}" class="form-control" id="firstName">
+        </div>
+        <div class="mb-3">
+            <label for="lastName" class="form-label">Last Name</label>
+            <input type="text" th:field="*{lastName}" class="form-control" id="lastName">
+        </div>
+        <div class="mb-3">
+            <label for="streetAddress" class="form-label">Street Address</label>
+            <input type="text" th:field="*{address.streetAddress}" class="form-control" id="streetAddress">
+        </div>
+        <div class="mb-3">
+            <label for="city" class="form-label">City</label>
+            <input type="text" th:field="*{address.city}" class="form-control" id="city">
+        </div>
+        <div class="mb-3">
+            <label for="state" class="form-label">State</label>
+            <input type="text" th:field="*{address.state}" class="form-control" id="state">
+        </div>
+        <div class="mb-3">
+            <label for="zip" class="form-label">Zip Code</label>
+            <input type="text" th:field="*{address.zip}" class="form-control" id="zip">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email Address</label>
+            <input type="email" th:field="*{email}" class="form-control" id="email">
+        </div>
+        <br>
+        <center>
+            <button type="submit" class="btn btn-light text-dark border-dark">Submit</button>
+        </center>
+    </form>
 </div>
+</body>
+
 </html>
