fixed persistance issues

--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -17,6 +17,10 @@
           method="post">
         <table border="0" cellpadding="10">
             <tr>
+                <td>User ID:</td>
+                <td><input type="text" th:field="*{id}" readonly/></td>
+            </tr>
+            <tr>
                 <td>First Name:</td>
                 <td><input type="text" th:field="*{firstName}" required/></td>
             </tr>
