--- a/src/main/resources/templates/user-history.html
+++ b/src/main/resources/templates/user-history.html
@@ -13,8 +13,7 @@
 <div align="center">
     <h1><br>Customer Rental History</h1>
     <br/><br/>
-    <p>Customer Username: </p>
-    <p th:text="${user.username}">Username</p><br>
+    <h2 th:text="${user.username}">Username</h2><br>
     <div class="container">
         <table class="table table-striped border border-dark">
             <thead>
