--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
     <div style="display:flex; justify-content:center" class="fs-3">
         <p><br>Latest Arrival</p>
     </div>
-    <center><img src="cover-images/IMG_0152.JPG"
+    <center><img th:src="@{'/' + ${book.imageFile}}"
                  width="200" height="300" class="center rounded"/></center>
     <br><br><br>
 </div>
