--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,38 +18,56 @@
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input type="text" th:field="*{username}" class="form-control" id="username">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('username')}"
+                  th:errors="*{username}">Username Error</span>
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="text" th:field="*{password}" class="form-control" id="password">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('password')}"
+                  th:errors="*{password}">Password Error</span>
         </div>
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
             <input type="text" th:field="*{firstName}" class="form-control" id="firstName">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('firstName')}"
+                  th:errors="*{firstName}">First Name Error</span>
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
             <input type="text" th:field="*{lastName}" class="form-control" id="lastName">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('lastName')}"
+                  th:errors="*{lastName}">Last Name Error</span>
         </div>
         <div class="mb-3">
             <label for="streetAddress" class="form-label">Street Address</label>
             <input type="text" th:field="*{address.streetAddress}" class="form-control" id="streetAddress">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('address.streetAddress')}"
+                  th:errors="*{address.streetAddress}">Street Address Error</span>
         </div>
         <div class="mb-3">
             <label for="city" class="form-label">City</label>
             <input type="text" th:field="*{address.city}" class="form-control" id="city">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('address.city')}"
+                  th:errors="*{address.city}">City Error</span>
         </div>
         <div class="mb-3">
             <label for="state" class="form-label">State</label>
             <input type="text" th:field="*{address.state}" class="form-control" id="state">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('address.state')}"
+                  th:errors="*{address.state}">State Error</span>
         </div>
         <div class="mb-3">
             <label for="zip" class="form-label">Zip Code</label>
             <input type="text" th:field="*{address.zip}" class="form-control" id="zip">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('address.zip')}"
+                  th:errors="*{address.zip}">Zip Code Error</span>
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email Address</label>
             <input type="email" th:field="*{email}" class="form-control" id="email">
+            <span class="validationError text-danger" th:if="${#fields.hasErrors('email')}"
+                  th:errors="*{email}">Email Error</span>
         </div>
         <br>
         <center>
